# config/routes.rb
@@ -8,6 +8,7 @@ Rails.application.routes.draw do
 
   namespace :api do
     namespace :v1 do
+      get "health", to: "health#show"
       resources :users, only: [ :create ]
       resources :sessions, only: [ :create ]
       resource :timeline, only: :show
